# work

./: core
NContorol/: CMakeLists.txt
NContorol/testFsm/: messageFsm.hpp
NContorol/testzmq/: CMakeLists.txt  core  mechine.hpp  testClass.cpp  testPubSub.cpp  threadMechine.cpp  tzmqClient.cpp  tzmqServer.cpp  zhelpers.h
controlFrame/: CMakeLists.txt  cross-arm-linux-gnueabihf.cmake
controlFrame/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake
controlFrame/build_arm/depend/jsoncpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
controlFrame/build_arm/depend/jsoncpp/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
controlFrame/build_arm/depend/jsoncpp/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
controlFrame/build_arm/depend/jsoncpp/src/lib_json/: CTestTestfile.cmake  Makefile  cmake_install.cmake
controlFrame/build_arm/src/: Makefile  cmake_install.cmake
controlFrame/build_arm/test/: Makefile  cmake_install.cmake  testServer
controlFrame/depend/: zhelpers.h
controlFrame/depend/jsoncpp/: CMakeLists.txt
controlFrame/depend/jsoncpp/build_arm/: CMakeCache.txt  Makefile
controlFrame/depend/jsoncpp/build_arm/include/: Makefile
controlFrame/depend/jsoncpp/build_arm/src/: Makefile
controlFrame/depend/jsoncpp/build_arm/src/lib_json/: Makefile
controlFrame/depend/jsoncpp/build_x86/: CMakeCache.txt  Makefile
controlFrame/depend/jsoncpp/build_x86/include/: Makefile
controlFrame/depend/jsoncpp/build_x86/src/: Makefile
controlFrame/depend/jsoncpp/build_x86/src/lib_json/: Makefile
controlFrame/depend/jsoncpp/include/json/: reader.h
controlFrame/depend/jsoncpp/src/lib_json/: CMakeLists.txt
controlFrame/depend/zeromq/: zhelpers.h
controlFrame/depend/zeromq/zmqlib/: libzmq.so.5.1.6
controlFrame/src/: CMakeLists.txt
controlFrame/src/base/: actionBase.hpp  autoValue.hpp  messageBase.hpp  messageType.hpp  moduleBase.hpp  stateBase.hpp
controlFrame/src/hello/: hello.cpp  hello.hpp  helloCommands.cpp  helloCommands.hpp
controlFrame/src/io/: io.cpp  io.hpp  ioCommands.cpp  ioCommands.hpp
controlFrame/src/motion/: motion.cpp  motion.hpp  motionCommands.cpp  motionCommands.hpp
controlFrame/src/motion/robotkdl/: robotKdl.hpp
controlFrame/src/robotStateMechine/: robotStateMechine.cpp  robotStateMechine.hpp  robotStates.cpp
controlFrame/test/: CMakeLists.txt  test.cpp  testClient0.cpp  testClient1.cpp  testHello.cpp  testServer.cpp  testmessage.cpp
controlFrameHello/: CMakeLists.txt
controlFrameHello/depend/libzmq/linux_os_arm/: libzmq.so.5.1.6
controlFrameHello/depend/libzmq/linux_os_x86/: libzmq.so.5.1.6
controlFrameHello/main/: CMakeLists.txt  main.cpp
controlFrameHello/src/: CMakeLists.txt
controlFrameHello/src/api/: api.cpp  api.hpp  apiCommands.cpp  apiCommands.hpp  apiHello.cpp  apiHello.hpp
controlFrameHello/src/base/: actionBase.hpp  moduleBase.hpp  stateBase.hpp
controlFrameHello/src/hello/: hello.cpp  hello.hpp  helloCommands.cpp  helloCommands.hpp
controlFrameHello/src/message/: messageClient.hpp  messageServer.hpp
controlFrameHello/src/robotStateMechine/: robotStateMechine.cpp  robotStateMechine.hpp  robotStates.cpp  robotStates.hpp
controlFrameHello/test/: CMakeLists.txt  test1.cpp
