include_directories(${CMAKE_HOME_DIRECTORY}/depend)
include_directories(${CMAKE_HOME_DIRECTORY}/src)
add_executable(test1 test.cpp)
target_link_libraries(test1 test_src jsoncpp zmq pthread)
add_executable(testMsg testmessage.cpp)
target_link_libraries(testMsg test_src jsoncpp zmq pthread)

add_executable(testClient0 testClient0.cpp)
target_link_libraries(testClient0 test_src jsoncpp zmq pthread)
add_executable(testClient1 testClient1.cpp)
target_link_libraries(testClient1 test_src jsoncpp zmq pthread)
add_executable(testServer testServer.cpp)
target_link_libraries(testServer test_src jsoncpp zmq pthread)